# svoyak_bot

./: .gitignore  Cargo.toml  README  TODO  defaultquestions.csv
.github/workflows/: build-and-test.yml
button/: admin.html  server.js  user.html
configs/: kolesov93_debug.json  stash_debug.json  stash_debug_2.json  stash_real.16.04.2022.json
questions.16.04.2022/: tour1.csv  tour2.csv  tour3.csv
src/: gamestate.rs  main.rs  messages.rs  player.rs  question.rs  questionsstorage.rs  stickers.rs  telegram_config.rs  timeout_stream.rs
