[package]
name = "svoyak_bot"
version = "0.1.0"
authors = ["stash"]
edition = '2018'

[dependencies]
csv = "*"
failure = "*"
futures_03 = { version = "0.3.7", package = "futures", features=["compat"] }
futures = { version = "0.1.*" }
futures-cpupool = "*"
telegram-bot = "0.7.0"
tokio = "0.1.*"
tokio-compat = "*"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
