[package]
name = "svoyak_bot"
version = "0.1.0"
authors = ["stash"]
edition = '2018'

[dependencies]
csv = "*"
failure = "*"
futures_03 = { version = "0.3.7", package = "futures", features=["compat"] }
futures = { version = "0.1.*" }
futures-cpupool = "*"
hyper = "*"
hyper-tls = "*"
telegram-bot = { git = "https://github.com/ayrat555/telegram-bot", branch = "ayrat555/api-fixes-10" }
tokio = "0.1.*"
tokio-compat = "*"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
